adicionado banco postgres

--- a/ToDoList/ToDoList.Api/appsettings.json
+++ b/ToDoList/ToDoList.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BancoLocal":"Server=localhost;Database=ToDoList;Trusted_Connection=True;"
+    "BancoLocal":"User ID=joeoliveira;Host=localhost;Port=5432;Database=ToDoList;"
   }
 }
